cv en modifications

--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -79,10 +79,13 @@
             Work-study program<br><br>
             Skills: Data Science · Data Analysis<br><br>
             <ul>
-              <li>Database creation and implementation: JMerise, PostgreSQL, MongoDB.<br>
-                Data retrieval and injection into the database via Python (Airflow, API requests, scraping with Selenium).</li>
-              <li>Model testing and evaluation: Performance evaluation of different detection and classification models for orbital maneuvers to improve tracking. Using Python (Random Forest, Deep Neural Networks).</li>
-              <li>Predictive modeling: Developed a model to predict high-risk atmospheric re-entry locations using Python (Linear Regression).</li>
+              <li>Database creation and implementation: JMerise, PostgreSQL, MongoDB<br>
+                Data retrieval and injection into the database via Python <br>
+                Airflow, API requests, scraping with Selenium</li>
+              <li>Model testing and evaluation: Performance evaluation of different detection and classification models for orbital maneuvers to improve tracking using Python<br>
+                Random Forest, Deep Neural Networks</li>
+              <li>Predictive modeling: Developed a model to predict high-risk atmospheric re-entry locations using Python<br>
+                Linear Regression</li>
               <li>HPC environment: Worked on the sandbox part of an HPC – Linux (Alma &amp; Debian).</li>
             </ul>
           </li>
