adding ongoing project

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 
   <p><h2>Explorez mes projets de science des données</h2><br>
       <a href="/projects/heart_disease">Modèle pour évaluer la possibilité de développer une maladie cardiaque</a><br>
-      <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a>
+      <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a><br>
+      Projet en cours : Test rétroactif de stratégies d’investissement afin d’analyser et de comparer leurs performances.
   </p><br><br>
 
   <p><h2>Explorez mes projets d'analyses des données</h2><br>
