adding ongoing project_2

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 
   <p><h2>Explorez mes projets de science des données</h2><br>
       <a href="/projects/heart_disease">Modèle pour évaluer la possibilité de développer une maladie cardiaque</a><br>
-      <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a><br>
-      Projet en cours : Test rétroactif de stratégies d’investissement afin d’analyser et de comparer leurs performances.
+      <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a>
   </p><br><br>
 
   <p><h2>Explorez mes projets d'analyses des données</h2><br>
-      <a href="/projects/aloe">Analyse des ventes d'une jeune entreprise</a>
+      <a href="/projects/aloe">Analyse des ventes d'une jeune entreprise</a><br>
+      Projet en cours : Test rétroactif de stratégies d’investissement afin d’analyser et de comparer leurs performances.
   </p><br><br>
 
   <p><h2>Parcourez une version plus complète de mon CV</h2><br>
