--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -6,12 +6,12 @@
 
     <p><h2>Explore my data science projects</h2><br>
     <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a><br>
-    <a href="/projects/seattle">Energy consumption prediction model for buildings in Seattle</a><br>
-    Ongoing project : Backtesting investment strategies to analyse and compare their performances 
+    <a href="/projects/seattle">Energy consumption prediction model for buildings in Seattle</a>
     </p><br><br>
 
     <p><h2>Explore my data analysis projects</h2><br>
-    <a href="/projects/aloe">Sales analysis for a young company</a>
+    <a href="/projects/aloe">Sales analysis for a young company</a><br>
+    Ongoing project : Backtesting investment strategies to analyse and compare their performances 
     </p><br><br>
 
     <p><h2>View a more complete version of my resume</h2><br>
